[package]
name = "connectrpc-axum"
version.workspace = true
edition.workspace = true
description = "axum style and axum compatible Connect Protocol server"
readme = "../README.md"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
connectrpc-axum-core = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = [
    "timeout",
    "limit",
] }
tracing = { workspace = true }

flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[features]
default = []
tonic = ["dep:tokio-stream", "dep:tonic", "dep:tonic-prost"]

# Unary-only (tower-http layers for HTTP body compression)
compression-gzip-unary = ["tower-http/compression-gzip", "tower-http/decompression-gzip", "dep:flate2"]
compression-deflate-unary = ["tower-http/compression-deflate", "tower-http/decompression-deflate", "dep:flate2"]
compression-br-unary = ["tower-http/compression-br", "tower-http/decompression-br", "dep:brotli"]
compression-zstd-unary = ["tower-http/compression-zstd", "tower-http/decompression-zstd", "dep:zstd"]

# Stream-only (envelope codecs for per-message compression)
compression-gzip-stream = ["dep:flate2", "connectrpc-axum-core/compression-gzip-stream"]
compression-deflate-stream = ["dep:flate2", "connectrpc-axum-core/compression-deflate-stream"]
compression-br-stream = ["dep:brotli", "connectrpc-axum-core/compression-br-stream"]
compression-zstd-stream = ["dep:zstd", "connectrpc-axum-core/compression-zstd-stream"]

# Umbrella features (both unary and stream)
compression-gzip = ["compression-gzip-unary", "compression-gzip-stream"]
compression-deflate = ["compression-deflate-unary", "compression-deflate-stream"]
compression-br = ["compression-br-unary", "compression-br-stream"]
compression-zstd = ["compression-zstd-unary", "compression-zstd-stream"]

# Full compression
compression-full = ["compression-gzip", "compression-deflate", "compression-br", "compression-zstd"]
