[workspace]
resolver = "2"
members = ["common", "cases-buffa", "cases-release", "cases-connectrpc", "runner"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
futures = "0.3"
http = "1"
http-body-util = "0.1"
redis = { version = "1.0", default-features = false, features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
