[package]
name = "compare-buffa-beta5-cases-beta5"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
connectrpc-axum = { version = "=0.1.0-beta.5", package = "connectrpc-axum" }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
pbjson = "0.9"
pbjson-types = "0.9"
prost = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }

[build-dependencies]
connectrpc-axum-build = { version = "=0.1.0-beta.5", package = "connectrpc-axum-build" }
