[package]
name = "compare-buffa-beta5-cases-connectrpc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
buffa = { version = "0.2", features = ["json"] }
buffa-types = { version = "0.2", features = ["json"] }
bytes = { workspace = true }
compare-buffa-beta5-common = { path = "../common" }
connectrpc = { version = "=0.2.1", features = ["client", "server"] }
futures = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[build-dependencies]
connectrpc-build = { version = "=0.2.0" }
