[package]
name = "compare-buffa-beta5-runner"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "compare"
harness = false

[dependencies]

[dev-dependencies]
axum = { workspace = true }
bytes = { workspace = true }
compare-buffa-beta5-cases-buffa = { path = "../cases-buffa" }
compare-buffa-beta5-cases-connectrpc = { path = "../cases-connectrpc" }
compare-buffa-beta5-cases-release = { path = "../cases-release" }
criterion = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
libc = "0.2"
tokio = { workspace = true }
