[package]
name = "compare-buffa-beta5-runner"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "fortunes"
harness = false

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
compare-buffa-beta5-cases-buffa = { path = "../cases-buffa" }
compare-buffa-beta5-common = { path = "../common" }
compare-buffa-beta5-cases-connectrpc = { path = "../cases-connectrpc" }
compare-buffa-beta5-cases-release = { path = "../cases-release" }
connectrpc = { version = "=0.2.1", features = ["client"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
